feat: 完成内网穿透 demo docs: 更新需求、任务列表等文档

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -32,6 +32,11 @@ linters:
       line-length: 150
     nestif:
       min-complexity: 10
+    revive:
+      rules:
+        # 禁用包注释检查
+        - name: package-comments
+          disabled: true
 
 formatters:
   enable:
