--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-# .github/workflows/release.yml
 name: Release
 
 on:
@@ -35,7 +34,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod   # 根据 go.mod 自动选择 1.23/1.24 等
+          go-version-file: go.mod   # 根据 go.mod 自动选择 1.24 等
 
       - name: Build server & client
         env:
